Bugfix: Tests now pass for scope "PROGRAMDATA-TEST1-CA.WRITE" TODO: (1) Make WRITE imply READ (2) Short-Circuit the read to SONG if the system scope matches